# health-data-hub

./: .dockerignore  .env.example  .gitignore  API.md  API_REFERENCE.md  BRIDGE.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSING.md  Makefile  NOTICE  README.md  TRADEMARK.md  UPGRADING.md  config.yaml.example  docker-compose.override.yml.example  docker-compose.yml  package.json  pyproject.toml  requirements.txt  schema.sql  server.py  setup.sh  tsconfig.json
.github/: social-preview.html
.github/workflows/: ci.yml
analysis/: __init__.py  config.py  engine.py  scheduler.py  types.py
analysis/llm/: __init__.py  client.py  safety.py
analysis/llm/prompts/: __init__.py  anomaly.py  base.py  daily_briefing.py  weekly_summary.py
analysis/statistical/: __init__.py  aggregator.py  anomaly.py  baselines.py  correlations.py  gates.py  scoring.py  trends.py
apps/: README.md
apps/api/server/: __init__.py  main.py
apps/web/: Dockerfile  README.md  next.config.mjs  package.json  tsconfig.json
apps/web/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
apps/worker/worker/: listener.py  main.py  runs.py  sources.py
contracts/: IOS_CROSS_CHECK.md  SOURCE_DEVICE_IMPLEMENTATION_PLAN.md  V1.md  ios-headers.json  parity.json
contracts/json-schema/: _bundle.json
contracts/openapi/: v1.locked.json
db/: README.md  schema.sql
db/migrations/: 004_pipeline_runs.sql  005_analysis_owner.sql  007_healthsave_sync_receipts.sql  008_oauth_tokens.sql  010_source_id_on_dedicated_whoop_tables.sql  014_canonical_coverage_index.sql  015_source_device_registry.sql  016_canonical_obs_stream_index.sql  017_intelligence_settings.sql  018_canonical_freshness_and_sources_index.sql  019_medication_dose_events.sql
deploy/: README.md
deploy/apps-vm/: README.md  deploy.sh  docker-compose.central-db.override.yml
deploy/grafana/dashboards/: healthsave-overview.json  heart.json  insights.json  sleep.json  workouts.json
deploy/local-ai/: README.md  setup-local-ai.sh
deploy/mosquitto/: mosquitto.conf
deploy/remote-vm/: README.md  deploy.sh  docker-compose.external-db.override.yml
deploy/reverse-proxy/: README.md  docker-compose.proxy.override.yml  nginx.conf
docs/: README.md  connect-healthsave.md  licensing.md  overview.md  quick-start.md  roadmap.md
docs/api/: index.md  v1-apple-contract.md  v2-read-api.md
docs/capture/: apple-health.md  importers-garmin-samsung.md  index.md  plugins-whoop-amazfit.md  roadmap-android-webhooks.md
docs/concepts/: canonical-observations.md  privacy-and-egress.md  private-body-observatory.md  source-device-stream.md
docs/development/: dev-setup.md  storage-backends.md
docs/integrations/: home-assistant.md
docs/operations/: backup-and-migrations.md  deployment.md  local-llm.md  metrics.md  multi-user.md  reverse-proxy.md  security.md  troubleshooting.md
docs/surfaces/: findings-and-body-briefs.md  grafana.md  observatory-web.md
grafana/dashboards/: activity.json  healthsave-overview.json  workouts.json
grafana/provisioning/datasources/: healthsave.yaml
home-assistant/: healthsave-package.yaml  secrets.example.yaml
integrations/: README.md
integrations/home-assistant/: README.md  nervous-system-core-package.yaml
migrations/: 001_audit_hardening.sql  002_analysis_tables.sql  003_multi_user.sql
plugins/: README.md
plugins/.generated/: plugin-registry.json
plugins/sources/amazfit/: __init__.py  auth.py  fetch.py  normalize.py
plugins/sources/apple_health_healthsave/: README.md  __init__.py  plugin.yaml
plugins/sources/whoop/: README.md  __init__.py  fetch.py  normalize.py  oauth.py  plugin.yaml
scripts/: amazfit_authorize.py  generate_ios_response_corpus.py  generate_v1_lock.py  generate_v2_schemas.py  import_garmin.py  import_samsung.py  migrate.py  replay_apple.py
server/: __init__.py  main.py
server/api/: deps.py  health_routes.py  ingest.py  insights.py  metrics.py  status.py
server/db/: __init__.py  session.py
server/ingestion/: __init__.py  handlers.py  mappers.py  owner.py  parsers.py  registry.py  sleep.py  storage.py
server/models/: batch.py  insights.py
tests/: conftest.py  test_amazfit_authorize_cli.py  test_amazfit_fetch.py  test_analysis_config.py  test_analysis_engine.py  test_anomaly_detector.py  test_api_contract.py  test_api_reference_complete.py  test_apple_normalizer.py  test_apps_vm_deploy.py  test_auth.py  test_auth_keyring.py  test_canonical_dual_write.py  test_canonical_dual_write_coverage.py  test_canonical_observation_store.py  test_compose_mosquitto.py  test_compose_security.py  test_correlations.py  test_data_aggregator.py  test_db_migrate.py  test_db_session_pool.py  test_docs_accuracy.py  test_egress.py  test_experiment_readiness.py  test_experiment_runner.py  test_grafana_dashboard_contract.py  test_homeassistant_mqtt_bridge.py  test_homeassistant_mqtt_source_snapshot.py  test_identity_endpoints.py  test_identity_resolver.py  test_import_garmin.py  test_import_samsung.py  test_insights_routes.py  test_intelligence_resolver.py  test_llm_client.py  test_llm_healthcheck.py  test_medication_dose_events.py  test_metrics_endpoint.py  test_migration_bootstrap.py  test_multi_user.py  (+33 more)
tests/contract/: test_android_corpus_in_sync.py  test_android_headers_in_sync.py  test_android_requests_accepted.py  test_android_response_corpus_in_sync.py  test_ios_corpus_in_sync.py  test_ios_headers_in_sync.py  test_ios_response_corpus_in_sync.py  test_ios_v2_surface.py  test_parity_manifest_in_sync.py  test_parity_manifest_valid.py  test_single_llm_transport.py  test_storage_invariant.py  test_storage_no_upward_imports.py  test_two_brain_boundary.py  test_web_api_mirror.py
tests/contract/api_v1/: test_v1_contract.py  test_v1_golden_payloads.py  test_v1_ios_contract.py  test_v1_ios_headers.py
tests/contract/v2/: test_v2_meta.py
tests/e2e/: test_e2e_ingest_to_read.py
tests/fixtures/android_healthsave/: README.md  heart_rate_batch.json  (+3 more)
web-mockups/: README.md
web-mockups/html/: experiments.html  findings.html  privacy.html  sources.html  today.html
(+145 files in other folders)
