[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "health-data-hub"
version = "1.0.0"
description = "Self-hosted Apple Health server - HealthKit ingest into TimescaleDB, Grafana dashboards, and local LLM briefings via Ollama."
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
readme = "README.md"
keywords = [
    "apple-health",
    "healthkit",
    "health-data",
    "quantified-self",
    "self-hosted",
    "timescaledb",
    "postgresql",
    "grafana",
    "fastapi",
    "ollama",
    "local-llm",
    "home-assistant",
    "docker",
    "privacy",
    "wearables",
    "health-tracking",
    "time-series",
    "data-pipeline",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "fastapi==0.115.0",
    "pydantic==2.9.2",
    "uvicorn[standard]==0.30.0",
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.30.0",
    "litellm>=1.40.0",
    "apscheduler>=3.10.0",
    "prometheus-client>=0.21.0",
    "pyyaml>=6.0",
    "scipy>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.9",
    "fitparse>=1.2.0",
]
garmin = [
    "fitparse>=1.2.0",
]

[tool.setuptools.packages.find]
# v2 layout: server under apps/api/, worker under apps/worker/, and
# analysis + compat_v1 + contracts + runtime + storage under
# packages/py/. Multi-root `where` keeps `import server`,
# `import analysis`, `import compat_v1`, `import contracts`,
# `import runtime`, `import storage`, and `import worker` working
# after `pip install -e .` ŌĆö see contracts/V1.md.
where = ["apps/api", "apps/worker", "packages/py"]
include = [
    "server*",
    "analysis*",
    "compat_v1*",
    "contracts*",
    "runtime*",
    "storage*",
    "worker*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# v2 layout: pytest adds these to sys.path so `import server`,
# `import analysis`, `import contracts`, `import compat_v1`, and
# `import worker` work without requiring `pip install -e .` first.
# CI still runs `pip install -e .[dev]` for the full install path;
# this pythonpath is the safety net for fresh checkouts.
pythonpath = ["apps/api", "apps/worker", "packages/py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]
