[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "healthsave-observatory"
version = "1.0.0"
description = "HealthSave Observatory - a self-hosted private body observatory: health-data capture (Apple Health today; Android Health Connect, wearables, and webhooks planned) into a canonical TimescaleDB record, with evidence-linked findings, Body Briefs, a private read API (CLI + MCP planned), and a default-deny egress boundary."
requires-python = ">=3.12,<3.14"
license = { text = "Elastic-2.0" }
readme = "README.md"
keywords = [
    "health-observatory",
    "self-hosted",
    "apple-health",
    "android-health-connect",
    "healthkit",
    "wearables",
    "whoop",
    "oura",
    "garmin",
    "hrv",
    "quantified-self",
    "biohacking",
    "personal-health-api",
    "mcp",
    "home-assistant",
    "timescaledb",
    "postgresql",
    "fastapi",
    "local-llm",
    "privacy",
    "docker",
    "time-series",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: End Users/Desktop",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "fastapi==0.115.0",
    "pydantic==2.9.2",
    "uvicorn[standard]==0.30.0",
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.30.0",
    "litellm>=1.40.0",
    "apscheduler>=3.10.0",
    "prometheus-client>=0.21.0",
    "paho-mqtt>=2.1.0",
    "pyyaml>=6.0",
    "scipy>=1.14.0",
    "cryptography>=43.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.9",
    "fitparse>=1.2.0",
]
garmin = [
    "fitparse>=1.2.0",
]

[tool.setuptools.packages.find]
# v2 layout: server under apps/api/, worker under apps/worker/, agents
# under apps/agents/, and analysis + compat_v1 + contracts + runtime +
# storage + plugin_sdk under packages/py/. Multi-root `where` keeps
# `import server`, `import analysis`, `import compat_v1`,
# `import contracts`, `import runtime`, `import storage`, `import
# worker`, `import agents`, and `import plugin_sdk` working after
# `pip install -e .` — see contracts/V1.md.
where = ["apps/api", "apps/worker", "apps/agents", "packages/py"]
include = [
    "server*",
    "analysis*",
    "auth*",
    "compat_v1*",
    "contracts*",
    "db*",
    "runtime*",
    "homeassistant_mqtt*",
    "storage*",
    "normalization*",
    "replay*",
    "worker*",
    "agents*",
    "plugin_sdk*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: end-to-end test against a live stack; skipped unless E2E_BASE_URL is set (see `make e2e`)",
]
# v2 layout: pytest adds these to sys.path so `import server`,
# `import analysis`, `import contracts`, `import compat_v1`,
# `import homeassistant_mqtt`, and
# `import worker` work without requiring `pip install -e .` first.
# CI still runs `pip install -e .[dev]` for the full install path;
# this pythonpath is the safety net for fresh checkouts.
pythonpath = ["apps/api", "apps/worker", "apps/agents", "packages/py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]
